--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -3,7 +3,7 @@
     <form action="/login" method="post" novalidate class="needs-validation">
         <h2 class="offset-3">Login</h2>
         <div class="row col-7 offset-2">
-            <div class="row offset-3 col-7 mt-1">
+            <div class="row offset-1 col-12 mt-1">
 
                 <label for="username">Username</label>
                <input type="text"  id="username" placeholder="@username"  name="username"  class="form-control" required>
@@ -14,10 +14,10 @@
             
         
     
-        <div class=" mt-3 row offset-3 col-7 mt-1">
+        <div class=" mt-3 row offset-1 col-12 mt-1">
         
             <label for="password">password</label>
-           <input type="password"  id="password" placeholder="XXXXXXXX" name="password" class="form-control" required>
+           <input type="password"  id="password" placeholder="XXXXXXXX" name="password" class="form-control col-12" required>
            <div class="invalid-feedback">password required</div>
     
           
