--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -2,8 +2,8 @@
 <body>
     <form action="/signup" method="post" novalidate class="needs-validation">
         <h2 class="offset-3">signup for Wanderlust</h2>
-        <div class="row col-7 offset-2">
-            <div class="row offset-3 col-7 mt-1">
+        <div class="row offset-1 col-12 ">
+            <div class="row offset-1 col-12  mt-1">
 
                 <label for="username">Username</label>
                <input type="text"  id="username" placeholder="@username"  name="username"  class="form-control" required>
@@ -11,7 +11,7 @@
         
            </div>
         
-           <div class=" mt-3 row offset-3 col-7 mt-1">
+           <div class=" mt-3 row offset-1 col-12  mt-1">
         
             <label for="email">Email</label>
            <input type="text"   placeholder="example@gmail.com" id="email" name="email" class="form-control" required>
@@ -22,7 +22,7 @@
         </div>
         
     
-        <div class=" mt-3 row offset-3 col-7 mt-1">
+        <div class=" mt-3 row offset-1 col-12  mt-1">
         
             <label for="password">password</label>
            <input type="password"  id="password" placeholder="XXXXXXXX" name="password" class="form-control" required>
