--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,12 +1,17 @@
  <% layout("layouts/boilerplate")%>
- 
- <style>
-  .card{
-    border: none;
-  }
- </style>
-  
-   
+   <style>
+    .card{
+      border: none;
+    }
+    .btn{
+      border: none;
+      font-size: 1.5rem;
+      color: white;
+    }
+     .toggle-like{
+      color: red;
+     }
+   </style>
    <!-- <h2>All Listing Details</h2> -->
    <div class="filter-arrow-container">
     
@@ -21,12 +26,13 @@
         </div>
       </a>
       
-      <a href="/listings/category/Beach"><div id="filter">
+       
+      
+      <a href="/listings/category/Beachfront"><div id="filter">
         <div><i class="fa-solid fa-umbrella-beach"></i></div>
-        <p>Beach</p>
+        <p>Beachfront</p>
       </div>
       </a>
-      
 
       <a href="/listings/category/Amazing pools">
         <div id="filter">
@@ -66,12 +72,7 @@
         </div>
        </a>
 
-       <a href="/listings/category/Mountains">
-        <div id="filter">
-          <div><i class="fa-solid fa-monument"></i></div>
-          <p>Mountains Homes</p>
-        </div>
-       </a>
+        
      
 
       <a href="/listings/category/Castles">
@@ -98,16 +99,19 @@
 </div>
      
     
-   <div class="container">
+   <!-- <div class="container">
       <div class="row">
-        <% for(let listing of alllistings){ %>
         
-          <div class="card  col-sm-6 col-md-4 col-lg-3 mb-4 mt-3 " >
+        <% for(let listing of alllistings){ %>
+
+          
+        
+          <div class="card  col-sm-6 col-md-4 col-lg-4 mb-4 mt-3 " >
             <div class="  h-100">
            
                <div class="card-img-container h-55">
+
                   <a href="/listings/<%= listing._id %>">   <img src="<%= listing.image.url %>" class="card-img-top img-fluid  " alt="image"> </a>
-                 
                </div>
               <div class="card-body d-flex flex-column">
               <a href="/listings/<%= listing._id %>"> <b><p class="card-text"><%= listing.title %></p></b></a> 
@@ -119,37 +123,37 @@
       
         <% } %>
       </div>
+    </div> -->
+
+    <div class="container">
+      <div class="row">
+        <% for(let listing of alllistings){ %>
+          <div class="card col-sm-6 col-md-4 col-lg-4 mb-4 mt-3">
+            <div class="h-100">
+              <div class="card-img-container position-relative h-55">
+                <a href="/listings/<%= listing._id %>">
+                  <img src="<%= listing.image.url %>" class="card-img-top img-fluid" alt="image">
+                </a>
+                <button class="btn btn-outline-danger position-absolute top-0 end-0 m-2 toggle-like" aria-label="Like">
+                  <i class="fa fa-heart"></i>
+                </button>
+
+              </div>
+              <div class="card-body d-flex flex-column">
+                <a href="/listings/<%= listing._id %>">
+                  <b><p class="card-text"><%= listing.title %></p></b>
+                </a>
+                <a href="/listings/<%= listing._id %>">
+                  <p class="card-text mt-auto">₹<%= listing.price %>/night <i class="tax-info">&nbsp; +18% GST</i></p>
+                </a>
+              </div>
+            </div>
+          </div>
+        <% } %>
+      </div>
     </div>
+    
+    <script src="../js/script"></script>
      
-    <script>
-      const Tax_switch = document.getElementById("flexSwitchCheckDefault");
-    const tax_info = document.getElementsByClassName("tax-info");
-    Tax_switch.addEventListener("click",()=>{
-      for(info of tax_info){
-        if(info.style.display!="inline"){
-         info.style.display="inline"
-      } else{
-        info.style.display="none"
-      }
-
-      }
-      
-    });
-
-    const filtersContainer = document.querySelector('.filters');
-    const arrowRight = document.querySelector('.filter-arrow-right');
-    const arrowLeft = document.querySelector(".filter-arrow-left");
-
-    arrowRight.addEventListener('click', () => {
-        // Scroll to the right by 200px (adjust as needed)
-        filtersContainer.scrollBy({ left: -100, behavior: 'smooth' });
-    });
-
-    arrowLeft.addEventListener("click",()=>{
-      filtersContainer.scrollBy({ left: 100, behavior: 'smooth' });
-    });
-
-    </script>
-       
- 
+    
  
