--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -7,7 +7,7 @@
         <b>
             <p><%= listing.title %></p>
         </b>
-        <p>owned by <i><b><%= listing.owner.username %></b></i></p>
+        <p>owned by <i><b><%=listing.owner.username %></b></i></p>
         <p><%= listing.description %></p>
         <p>₹<%= listing.price.toLocaleString("en-IN") %></p>
         <p><%= listing.location %></p>
@@ -24,9 +24,11 @@
         <% } %>
         <hr>
     </div>
+   
     <div class="mb-2">
         <% if (reqUser) { %>
             <br>
+            <br><br>
             <h3>Please Leave your experience</h3>
         <form action="/listings/<%= listing._id %>/reviews" method="post" novalidate class="needs-validation" >
             
@@ -60,12 +62,15 @@
         <p><b>All Reviews</b></p>
         <div class="row">
             <% for (review of listing.reviews) { %>
-            <div class="card  col-5 m-1 ">
+            <div class=" review-card col-4 m-1 h-5">
                 <div class="card-body review-card">
                     <h class="card-title"><b>@<%= review.author.username %></b></p>
                     <p class="card-text"><%= review.comment %></p>
              
-                    <p class="starability-result" data-rating="<%= review.rating  %>"> </p>
+                    <!-- <p class="starability-result" data-rating="<%= review.rating  %>"> </p> -->
+                     <% for(let i=0; i<parseInt(review.rating);i++) {%>
+                        <i class="fa-sharp fa-solid fa-star"></i>
+                        <% } %>
                         
                      
 
