--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -36,7 +36,7 @@
                 <option value="Mountains">Mountains</option>
                 <option value="Treehouse">Tree house</option>
                 <option value="Cabin">Cabin</option>
-                <option value="Castles">Castles</option>
+                <option value="Desert"> Desert </option>
                 <option value="Cottage">Cottage</option>
                 <option value="Historicalhomes">Historicalhomes</option>
                 <option value="Beach">Beach</option>
