--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -43,7 +43,86 @@
   .review-card .review-delete:hover {
     color: #c82333;
   }
+
+  .rounded-rect {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 0 50px -25px black;
+  }
+   
+  .flex-center {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+   
+  .flex-center.left {
+  left: 0px;
+  }
+   
+  .flex-center.right {
+  right: 0px;
+  }
+   
+  /* .sidebar-content {
+  position: absolute;
+  width: 95%;
+  height: 15%;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  color: #683193;
+  } */
+  .geocoder-dropdown-item {
+padding: 5px;
+}
+.geocoder-dropdown-icon {
+margin-right: 10px;
+}
+.geocoder-dropdown-text {
+color: #5a3fc0;
+font-family: Arial, Helvetica, sans-serif;
+font-size: larger;
+}
+.mapboxgl-ctrl-geocoder--input {
+    font: inherit;
+    width: 100%;
+    border: 0;
+    background-color: transparent;
+    margin: 0;
+    height: 50px;
+    color: #404040;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 6px 45px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.mapboxgl-ctrl-geocoder {
+   position: relative;
+   bottom: 120px;
+   right: 580px;
+
+}  .left.collapsed {
+  transform: translateX(-295px);
+  }
+   
+  .right.collapsed {
+  transform: translateX(295px);
+  }
+  @media (max-width: 767px){
+    .sidebar-toggle{
+  display: none;
+}
+  }
 </style>
+<script>
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+  const listing = JSON.parse('<%- JSON.stringify(listing) %>');
+</script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 
 <body>
     <h3>Listing Details</h3>
@@ -58,7 +137,7 @@
         <p><a href="https://www.google.com/search?q=<%= listing.title %> &nbsp;<%= listing.location  %>" target="_blank">Let's Go <i class="fa-sharp fa-solid fa-location-dot"></i></a> &nbsp; <%= listing.location %></p>
         <p><%= listing.country %></p>
         <% if (reqUser && listing.owner._id.equals(reqUser._id)) { %>
-        <div class="btn-div">
+        <div class="btn-div ">
             <div><button class="submit edit btn-outline-dark"><a href="/listings/<%= listing._id %>/edit">Edit</a></button></div>
             <div class="delete">
                 <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
@@ -67,8 +146,30 @@
             </div>
         </div>
         <% } %>
-        <hr>
+         
     </div>
+
+    <hr class="mt-3 mb-3">
+    <br><br><br><br>
+    
+<div class="col-8  mb-3" id="mapBox">
+  <h3>Where you'll be</h3>
+  <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+  
+  <div style=" position: relative; box-shadow: 10px 10px 10px rgba(0,0,0, 0.45);" id="map">
+    <!-- Right Sidebar -->
+    <div id="right" class="sidebar flex-center right collapsed">
+      <div class="sidebar-content rounded-rect flex-center">
+        <%= listing.location  %>
+        <div class="sidebar-toggle rounded-rect right" onclick="toggleSidebar('right')">
+          &larr;
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
    
     <div class="mb-2 leaves">
         <% if (reqUser) { %>
@@ -104,6 +205,8 @@
             <button class="btn btn-outline-dark mt-3">submit</button>
         </form>
         <% } %>
+        
+        
         <p class="allreview"><b>All Reviews</b></p>
         <div class="row">
             <% for (review of listing.reviews) { %>
@@ -126,4 +229,9 @@
             <% } %>
           </div>
     </div>
+    <script src="/js/map.js"></script>
 </body>
+ 
+    
+ 
+     
