--- a/public/css/styel.css
+++ b/public/css/styel.css
@@ -205,7 +205,7 @@ label{
   #filter {
       
       font: 1rem;
-      opacity: 1;
+      opacity: 0.5;
   }
   .filter-arrow-right,.filter-arrow-left{
     width: 20px;
@@ -216,7 +216,7 @@ label{
   display: none; /* WebKit browsers */
 }
 #filter:hover{
-  opacity: 1;
+  opacity: 0.5;
   
 }
  
@@ -311,6 +311,13 @@ font-size: 1.5rem;
    transform: rotate(90deg);
 }
 
+#map{
+  height: 400px;
+  width: 100%;
+  border-radius: 1rem;
+  border: 1px solid rgba(0, 128, 0, 0.428);
+  }
+
 @media (max-width: 767px) {
   .search-bar {
     width: 100%;
@@ -393,3 +400,24 @@ color: white;
 .wishlist-btn .fa-heart.text-danger {
 color: red;
 }
+
+#map{
+  height: 400px;
+  width: 100%;
+  border-radius: 1rem;
+  border: 1px solid rgba(0, 128, 0, 0.428);
+  }
+  @media (max-width: 767px){
+    .edit-btn{
+       width: 4rem !important;
+    }   
+    #map{
+       height: 300px !important;
+    }
+    #mapBox{
+      padding: 0px !important;
+    }
+    /* .mapboxgl-ctrl-fullscreen {
+      display: none !important; /* Hide the control 
+    } */
+    }
