--- a/public/css/styel.css
+++ b/public/css/styel.css
@@ -421,3 +421,6 @@ color: red;
       display: none !important; /* Hide the control 
     } */
     }
+    .navbar-brand{
+      height: 80px;
+    }
